@@ -25,6 +25,8 @@ import sys
 import tempfile
 from textwrap import dedent
 
+from testrepository.results import TestResultFilter
+
 testrconf_help = dedent("""
     Configuring via .testr.conf:
     ---
@@ -260,6 +262,9 @@ class TestCommand(object):
     def get_parser(self):
         """Get a parser with the .testr.conf in it."""
         parser = ConfigParser.ConfigParser()
+        # This possibly should push down into UI.
+        if self.ui.here == 'memory:':
+            return parser
         if not parser.read(os.path.join(self.ui.here, '.testr.conf')):
             raise ValueError("No .testr.conf config file")
         return parser
@@ -326,4 +331,29 @@ class TestCommand(object):
         :param receiver: The result to forward the result of global filtering.
         :return: A TestResult.
         """
+        filter_tags = self.get_filter_tags()
+        if filter_tags:
+            try:
+                from subunit.test_results import make_tag_filter
+            except ImportError:
+                raise ValueError(
+                    "Subunit not installed or does not have tag filtering support")
+            # predicates return False to filter something out. We want to
+            # filter out tagged tests *unless* they fail/error. So we want
+            # tag_p:False + outcome_p:False -> False
+            # tag_p:False + outcome_p:True -> True
+            # tag_p:True + * -> True
+            def error_or_fail(t, outcome, e, d, tags):
+                return outcome in ('error', 'failure')
+            def or_predicates(predicates):
+                def fn(*args, **kwargs):
+                    for predicate in predicates:
+                        if predicate(*args, **kwargs):
+                            return True
+                    return False
+                return fn
+            predicates = [make_tag_filter(None, filter_tags), error_or_fail]
+            predicate = or_predicates(predicates)
+            return TestResultFilter(
+                receiver, filter_success=False, filter_predicate=predicate)
         return receiver
